--- a/app/src/main/res/layout/delete_aty.xml
+++ b/app/src/main/res/layout/delete_aty.xml
@@ -4,10 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.raymond.mvpdemo.login.view.LoginAty">
-
-    <TextView
-        android:id="@+id/tv_current_user"
+    tools:context="com.example.raymond.mvpdemo.delete.view.DeleteAty">
+    <Button
+        android:id="@+id/btn_deleteUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -15,18 +14,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.2"
-        />
-
-    <Button
-        android:id="@+id/btn_login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="@string/get_current_user"
-        />
+        android:text="删除用户"/>
 
 
 </android.support.constraint.ConstraintLayout>
