--- a/app/src/main/res/layout/update_info_aty.xml
+++ b/app/src/main/res/layout/update_info_aty.xml
@@ -9,6 +9,7 @@
         android:id="@+id/edt_userID"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
+        android:hint="id"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -19,6 +20,7 @@
     <EditText
         android:id="@+id/edt_userAccount"
         android:layout_width="180dp"
+        android:hint="account"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -29,6 +31,7 @@
     <EditText
         android:id="@+id/edt_userPassword"
         android:layout_width="180dp"
+        android:hint="password"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
