--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/edt_userID"
         android:layout_width="260dp"
         android:layout_height="wrap_content"
-        android:hint="Hello World!"
+        android:hint="输入id"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -23,7 +23,7 @@
         android:id="@+id/edt_userAccount"
         android:layout_width="260dp"
         android:layout_height="wrap_content"
-        android:hint="Hello World!"
+        android:hint="用户账号"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -35,7 +35,7 @@
         android:id="@+id/edt_userPassword"
         android:layout_width="260dp"
         android:layout_height="wrap_content"
-        android:hint="Hello World!"
+        android:hint="用户密码"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -60,7 +60,7 @@
         android:id="@+id/btn_querry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="querry"
+        android:text="register"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -88,6 +88,17 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.8"
+        app:layout_constraintHorizontal_bias="0.6"/>
+    <Button
+        android:id="@+id/btn_query_witch_key"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="query"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.9"
         app:layout_constraintHorizontal_bias="0.6"/>
 
 
