--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -113,6 +113,30 @@
         app:layout_constraintVertical_bias="0.9"
         app:layout_constraintHorizontal_bias="0.2"/>
 
+    <Button
+        android:id="@+id/testTinyPng"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TinyPng"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.9"
+        app:layout_constraintHorizontal_bias="0.95"/>
+    <Button
+        android:id="@+id/btn_testGreenDAOID"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="测试ID"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.8"
+        app:layout_constraintHorizontal_bias="0.95"/>
+
+
 
 
 
