添加了一套的SearchView 的 Material Design 设计风格

--- a/app/src/main/res/layout/query_aty.xml
+++ b/app/src/main/res/layout/query_aty.xml
@@ -22,7 +22,7 @@
             android:elevation="4dp"
             android:minHeight="60dp"
             app:title="你好"
-            app:layout_scrollFlags="scroll|enterAlways"
+            app:layout_scrollFlags="scroll|enterAlways|snap"
             android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
@@ -32,9 +32,11 @@
                 <!--android:layout_height="wrap_content"-->
                 <!--android:text="95大白菜"-->
                 <!--/>-->
-
-
         </android.support.v7.widget.Toolbar>
+
+
+
+
         </android.support.design.widget.AppBarLayout>
 
 
@@ -51,15 +53,29 @@
             <!--android:id="@+id/swrLay_refresh"-->
             <!--android:layout_width="match_parent"-->
             <!--android:layout_height="match_parent">-->
+
+        <android.support.v4.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+            <ImageView
+                android:src="@mipmap/ic_launcher"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rlv_user_info"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior"
-                >
-
+                app:layout_behavior="@string/appbar_scrolling_view_behavior">
             </android.support.v7.widget.RecyclerView>
 
+            </LinearLayout>
+        </android.support.v4.widget.NestedScrollView>
 
         <!--</android.support.v4.widget.SwipeRefreshLayout>-->
 
