--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -148,6 +148,12 @@
         app:layout_constraintVertical_bias="0.7"
         app:layout_constraintHorizontal_bias="0.95"/>
 
+    <Button
+        android:id="@+id/btn_talk"
+        android:text="talk"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 
 
 
