--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="tabSelectColor">#FFFFFF</color>
     <color name="tabColor">#cccccc</color>
+    <color name= "lineColor">#FFB1B0B0</color>
 
 </resources>
